2003-10-14  Jerry James  <james@xemacs.org>

	* compiler.h: Check __GNUC_PATCHLEVEL__ definition.
	* depend: Regenerate.

2003-10-13  Jerry James  <james@xemacs.org>

	* dumper.h: Use {BEGIN,END}_C_DECLS instead of explicit #ifdef.
	* glyphs-eimage.c: Ditto.
	* glyphs-gtk.c: Ditto.
	* glyphs-msw.c: Ditto.
	* glyphs-x.c: Ditto.
	* gtk-xemacs.h: Ditto.
	* libinterface.h: Ditto.
	* lrecord.h: Ditto.
	* process.h: Ditto.
	* symeval.h: Ditto.
	* sysdll.h: Ditto.
	* syswindows.h: Ditto.
	* text.h: Ditto.
	* lisp.h: Ditto.  Move basic compiler defines to compiler.h.
	Remove redundant definitions.  Add MALLOC attribute to xmalloc,
	xcalloc, etc.  Change attribute uses to match new compiler.h.
	* compiler.h: New file containing basic compiler defines from lisp.h.
	* s/windowsnt.h (DECLARE_DOESNT_RETURN): Remove definitions now in
	compiler.h.

2003-10-10  Jerry James  <james@xemacs.org>

	* alloc.c (make_compiled_function): Fix C++ breakage introduced by
	2003-07-25 patch.

2003-07-25  Eric Benson  <eric_a_benson@yahoo.com>

	Delay the allocation and initialization of the args array in
	compiled_function objects from creation until first use, thus
	avoiding a bug in the portable dumper. See mail with subject
	"Symbol's value as variable is void: region" in the July 2003
	xemacs-beta archives.
	* alloc.c (make_compiled_function): initialize args, max_args,
	min_args, and args_in_array to zero.
	(Fmake_byte_code): Removed allocation and initialization of args
	array.
	* bytecode.c (optimize_compiled_function): Added allocation and
	initialization of args array.
	* eval.c (function_argcount): Added call to
	optimize_compiled_function.

2003-10-07  Jerry James  <james@xemacs.org>

	* emodules.c (vars_of_module): Make Vmodule_extensions visible to
	Lisp.  Move assignments next to the corresponding declarations.

2003-09-30  Jerry James  <james@xemacs.org>

	* Makefile.in.in (distclean): xemacs.def.in.in should not be
	removed.

2003-09-25  Jerry James  <james@xemacs.org>
